Fix video loading is white in dark mode

--- a/style/style-dark.scss
+++ b/style/style-dark.scss
@@ -152,7 +152,8 @@ div.con,
 .bl-button--ghost,
 .wrapper .pay-qrcode-wrp .pay-way-wrp .pay-btn,
 .wrapper .content,
-.comment-bilibili-con
+.comment-bilibili-con,
+.bilibili-player-video-panel
 {
     background-color: #222 !important;
 }
